--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     </string>
     <string name="title_activity_maps">Map</string>
     <string name="apiKey">A4A59288-25B8-4586-B736-6F453957C8BE</string>
+    
+    <string name="fragmentTitle">Custom Waypoint</string>
+    <string name= "markerTitleLabel">Marker Title</string>
+    <string name="marketTypeLabel">Type of Marker</string>
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
 </resources>
