--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     </string>
     <string name="title_activity_maps">Map</string>
     <string name="apiKey">A4A59288-25B8-4586-B736-6F453957C8BE</string>
+    <string name="title_activity_login">Sign in</string>
+    <string name="currently_monitoring">Currently Monitoring:</string>
+    <string name="user_s_email">User\'s Email</string>
+    <string name="add_a_user_to_monitor">Add a user to monitor</string>
+    <string name="add">Add</string>
+    <string name="long_press_user_to_stop_monitoring">Long press user to stop monitoring</string>
 </resources>
