--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,9 @@
     <string name="leave_group">Leave Group</string>
     <string name="enter_group_you_want_to_leave">Enter Group You Want To Leave</string>
     <string name="group_id">Group ID</string>
+    <string name="userGroupsView">\'s Groups:</string>
+    <string name="return_to_who_i_monitor">Return to Who I Monitor</string>
+    <string name="enter_group_to_be_removed_from">Enter Group To Be Removed From</string>
+    <string name="remove_from_group">Remove From Group</string>
 
 </resources>
