Commit -User is greeted on login -create user bug possibility fixed -some comments -toast changes -removed some unwanted cod

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,5 +63,6 @@
     <string name="join">join</string>
     <string name="please_enter_your_credentials">Please Enter Your Credentials</string>
     <string name="press_a_user_to_remove_them_from_a_group">Press a user to remove them from a group</string>
+    <string name="hi">Hi</string>
 
 </resources>
