--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Walking School Bus</string>
 
     <!-- Strings related to login -->
+    <string name="title_activity_login">Sign in</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -13,34 +14,33 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="title_activity_maps">Map</string>
-    <string name="apiKey">A4A59288-25B8-4586-B736-6F453957C8BE</string>
 
-    <string name="fragmentTitle">Custom Waypoint</string>
-    <string name="markerTitleLabel">Marker Title</string>
-    <string name="marketTypeLabel">Type of Marker</string>
-    <string name="confirm">Confirm</string>
-    <string name="cancel">Cancel</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="groupTitle">Group Name</string>
-    <string name="title_activity_login">Sign in</string>
+    <!--Monitoring/Monitored Strings-->
     <string name="currently_monitoring">Currently Monitoring:</string>
     <string name="user_s_email">User\'s Email</string>
     <string name="add_a_user_to_monitor">Add a user to monitor</string>
-    <string name="add">Add</string>
     <string name="long_press_user_to_stop_monitoring">Long press user to stop monitoring</string>
     <string name="currently_monitored_by">Currently monitored by:</string>
     <string name="add_user_to_monitor_me">Add user to monitor me</string>
     <string name="long_press_user_to_stop_being_by_them">Long press user to stop being by them</string>
     <string name="return_to_main_menu">Return to Main Menu</string>
-    <string name="remove">Remove</string>
     <string name="stop_monitoring_a_user">Stop monitoring a user</string>
     <string name="stop_a_user_from_monitoring_me">Stop a user from monitoring me</string>
-    <string name="logout">LOGOUT</string>
     <string name="see_who_i_monitor">See Who I Monitor</string>
     <string name="see_who_monitors_me">See Who Monitors Me</string>
-    <string name="my_groups">My Groups:</string>
+
+    <!--Main Menu Strings-->
+    <string name="login">Login</string>
+    <string name="user_name">User Name</string>
+    <string name="password">Password</string>
+    <string name="create_an_account">Create an Account</string>
+    <string name="hello_please_log_in_or_create_an_account">Hello! Please Log In or Create an Account</string>
+    <string name="logout">LOGOUT</string>
+
+    <!--Group Strings-->
+    <string name="groupTitle">Group Name</string>
+    <string name="manage_groups">Manage Groups</string>
+    <string name="welcome_to_the_walking_school_bus_app">Welcome to the Walking School Bus App!</string>
     <string name="leave_group">Leave Group</string>
     <string name="enter_group_you_want_to_leave">Enter Group You Want To Leave</string>
     <string name="group_id">Group ID</string>
@@ -48,21 +48,32 @@
     <string name="return_to_who_i_monitor">Return to Who I Monitor</string>
     <string name="enter_group_to_be_removed_from">Enter Group To Be Removed From</string>
     <string name="remove_from_group">Remove From Group</string>
-    <string name="finish">Finish</string>
-    <string name="login">Login</string>
-    <string name="user_name">User Name</string>
-    <string name="password">Password</string>
-    <string name="create_an_account">Create an Account</string>
-    <string name="hello_please_log_in_or_create_an_account">Hello! Please Log In or Create an Account</string>
-    <string name="map">Map</string>
-    <string name="manage_groups">Manage Groups</string>
-    <string name="welcome_to_the_walking_school_bus_app">Welcome to the Walking School Bus App!</string>
+    <string name="my_groups">My Groups:</string>
+
+    <!--Sign Up Strings-->
     <string name="enter_your_name">Enter Your Name</string>
     <string name="enter_your_email">Enter Your Email</string>
     <string name="create_your_password">Create Your Password</string>
-    <string name="join">join</string>
     <string name="please_enter_your_credentials">Please Enter Your Credentials</string>
     <string name="press_a_user_to_remove_them_from_a_group">Press a user to remove them from a group</string>
-    <string name="hi">Hi</string>
 
+    <!--Generic Strings-->
+    <string name="hi">Hi</string>
+    <string name="join">join</string>
+    <string name="map">Map</string>
+    <string name="remove">Remove</string>
+    <string name="finish">Finish</string>
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
+    <string name="add">Add</string>
+
+    <!--Map Strings-->
+    <string name="apiKey">A4A59288-25B8-4586-B736-6F453957C8BE</string>
+    <string name="saveGroup">Save New Group</string>
+    <string name="joinGroup">Join Group</string>
+    <string name="addUserToGroup">Add A User to Group</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="fragmentTitle">Custom Waypoint</string>
+    <string name="markerTitleLabel">Marker Title</string>
+    <string name="marketTypeLabel">Type of Marker</string>
 </resources>
