--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,7 @@
     <string name="fragmentTitle">Custom Waypoint</string>
     <string name="markerTitleLabel">Marker Title</string>
     <string name="marketTypeLabel">Type of Marker</string>
+    <string name="unread_messages">Unread Messages</string>
+    <string name="view_older_messages">View Older Messages</string>
+    <string name="send_a_message">Send A Message</string>
 </resources>
