Added Button to send to the group leader, and parent - Minor refactoring - Changed some UI elements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,6 @@
     <string name="send_to_parents">Send To Parents</string>
     <string name="send_to_selected_group">Send To Selected Group</string>
     <string name="enter_your_message">Enter Your Message:</string>
+    <string name="send_message_to_group_leader">Send Message To group Leader</string>
+    <string name="send_message_to_parents">Send Message To Parents</string>
 </resources>
