--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,6 +90,5 @@
     <string name="enter_your_message">Enter Your Message:</string>
     <string name="send_message_to_group_leader">Send Message To group Leader</string>
     <string name="send_message_to_parents">Send Message To Parents</string>
-    <string name="parents_dashboard">Parents Dashboard</string>
-    <string name="back">Back</string>
+    <string name="title_activity_parent_maps">Map</string>
 </resources>
