Added UI for groups that I lead activity - Linked Activities to show more information - Minor refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,6 @@
     <string name="emergency">EMERGENCY</string>
     <string name="emergency_message">EMERGENCY MESSAGE</string>
     <string name="send">SEND</string>
+    <string name="you_are_the_leader_of_the_following_groups">You are the leader of the following groups</string>
+    <string name="groups_i_lead">Groups I Lead</string>
 </resources>
