moved necessary values to strings.xml file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,29 @@
     <string name="send">SEND</string>
     <string name="you_are_the_leader_of_the_following_groups">You are the leader of the following groups</string>
     <string name="groups_i_lead">Groups I Lead</string>
+    <string name="new_teacher_s_name">New Teacher\'s Name</string>
+    <string name="textview">TextView</string>
+    <string name="edit_your_info">Edit Your Info</string>
+    <string name="new_address">New Address</string>
+    <string name="done">Done</string>
+    <string name="new_home_phone_number">New Home Phone Number</string>
+    <string name="new_cellphone_number">New Cellphone Number</string>
+    <string name="new_teacher_s_name_edit">New Teacher\'s Name</string>
+    <string name="edit_birth_day_mm_yy">Edit Birth Day (MM/YY)</string>
+    <string name="new_emergency_info">New Emergency Info</string>
+    <string name="new_name">New Name</string>
+    <string name="edit_my_info">Edit my Info</string>
+    <string name="emergency_messages_will_appear_below">Emergency messages will appear below</string>
+    <string name="messages_parent_dash">Messages:</string>
+    <string name="users_in_group">Users in group</string>
+    <string name="view_users_location">View Users Location</string>
+    <string name="next">next</string>
+    <string name="optional_info">Optional Info</string>
+    <string name="address">Address</string>
+    <string name="teacher_s_name">Teacher\'s Name</string>
+    <string name="home_phone_number">Home Phone Number</string>
+    <string name="cellphone_number">Cellphone Number</string>
+    <string name="birthday_mm_yy">Birthday (MM/YY)</string>
+    <string name="join_with_optional_info">Join</string>
+    <string name="emergency_info">Emergency Info</string>
 </resources>
