UI Changes - Added action bar to link to management activities   -- Removed {Logout Button, Edit Info Button} - Added support for settings activity - Added LeaderBoard activity access - Minor refactoring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,4 +180,5 @@
     <string name="R.string.send_userMessage_activity_you_must_leader">You must select a group you lead</string>
     <string name="parent_map_activity">Please allow device location</string>
     <string name="leader_boards">Leader Boards</string>
+    <string name="action_settings">Settings</string>
 </resources>
